@@ -1,12 +1,12 @@
 # Before `make install' is performed this script should be runnable with
-# `make test'. After `make install' it should work as `perl Template-Event.t'
+# `make test'. After `make install' it should work as `perl Async-Template.t'
 
 #########################
 
 # change 'tests => 1' to 'tests => last_test_to_print';
 
 use Test::More tests => 1;
-BEGIN { use_ok('Template::Event') };
+BEGIN { use_ok('Async::Template') };
 
 #########################
 
